@@ -1,5 +1,15 @@
 2008-05-21  Wim Taymans  <wim.taymans@collabora.co.uk>
 
+	* ext/vorbis/vorbisdec.c:
+	* gst/videoscale/gstvideoscale.c: (gst_video_scale_transform):
+	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_show_frame):
+	Some debug and comment fixes.
+
+	* tests/examples/dynamic/addstream.c: (main):
+	Fix , to ;
+
+2008-05-21  Wim Taymans  <wim.taymans@collabora.co.uk>
+
 	* ext/ogg/gstoggdemux.c: (gst_ogg_pad_typefind):
 	* gst/playback/decodetest.c: (new_decoded_pad_cb):
 	* gst/playback/gstdecodebin.c: (gst_decode_bin_init),
